# nbstrip

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: crate_release_process.md
scripts/: release.sh
src/: main.rs  strip.rs
tests/: install.rs
